--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.brandeis.notecatcher">
+    package="com.example.chrisf.notecatcher3">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-sdk
+        android:minSdkVersion="10"
+        android:targetSdkVersion="18" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.CAPTURE_AUDIO_OUTPUT" />
+
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -22,9 +30,21 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Activity2"
-            android:label="Activity2">
-        </activity>
+            android:name=".Record"
+            android:label="@string/title_activity_record"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".HappyBirthday"
+            android:label="@string/title_activity_happy_birthday"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SmallWorld"
+            android:label="@string/title_activity_small_world"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".ListSong"
+            android:label="@string/title_activity_list_song"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
